increased z-index of scanFocus, prevent outline to be behind the menu

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -206,7 +206,7 @@ nav #helpButton:focus {
 
 .scanFocus {
     outline: 10px solid rgba(239, 0, 0, 0.5) !important;
-    z-index: 1;
+    z-index: 10;
 }
 
 @media (max-width: 850px) {
